cabal-version: 1.18
name: language-ats
version: 1.2.0.16
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2018 Vanessa McHale
maintainer: vamchale@gmail.com
author: Vanessa McHale
stability: experimental
synopsis: Parser and pretty-printer for ATS.
description:
    Parser and pretty-printer for [ATS](http://www.ats-lang.org/), written with Happy and Alex.
category: Language, Lexer, Parser, Pretty Printer, ATS
build-type: Simple
data-files:
    test/data/*.dats
    test/data/*.sats
    test/data/*.out
extra-doc-files: README.md

source-repository head
    type: darcs
    location: https://hub.darcs.net/vmchale/ats

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

library
    exposed-modules:
        Language.ATS
    build-tools: happy >=1.17.1, alex -any, cpphs -any
    hs-source-dirs: src
    other-modules:
        Language.ATS.Lexer
        Language.ATS.Parser
        Language.ATS.PrettyPrint
        Language.ATS.Types
    default-language: Haskell2010
    other-extensions: OverloadedStrings DeriveGeneric DeriveAnyClass
                      FlexibleContexts FlexibleInstances PatternSynonyms
                      StandaloneDeriving GeneralizedNewtypeDeriving DerivingStrategies
                      DuplicateRecordFields DeriveFunctor TypeFamilies
    ghc-options: -Wall
    build-depends:
        base >=4.9 && <5,
        array -any,
        recursion-schemes >=5.0.1,
        microlens -any,
        deepseq -any,
        ansi-wl-pprint >=0.6.8,
        composition-prelude -any,
        containers -any,
        transformers -any
    
    if flag(development)
        ghc-options: -Werror
    
    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
                     -Wcompat

test-suite language-ats-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
    build-depends:
        base -any,
        language-ats -any,
        hspec -any,
        hspec-dirstream -any,
        system-filepath -any
    
    if flag(development)
        ghc-options: -Werror
    
    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates

benchmark language-ats-bench
    type: exitcode-stdio-1.0
    main-is: Bench.hs
    hs-source-dirs: bench
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base -any,
        language-ats -any,
        criterion -any
    
    if flag(development)
        ghc-options: -Werror
    
    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
