cabal-version: 1.18
name: shake-ats
version: 1.10.0.1
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2018 Vanessa McHale
maintainer: vamchale@gmail.com
author: Vanessa McHale
homepage: https://github.com/vmchale/shake-ats#readme
synopsis: Utilities for building ATS projects with shake
description:
    Various helper functions for building [ATS](http://www.ats-lang.org/) with the [shake](http://shakebuild.com/) library
category: Development, Build, ATS, Shake
build-type: Simple
extra-doc-files: README.md
                 CHANGELOG.md

source-repository head
    type: darcs
    location: https://hub.darcs.net/vmchale/ats

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

library
    exposed-modules:
        Development.Shake.ATS
    hs-source-dirs: src
    other-modules:
        Development.Shake.ATS.Type
        Development.Shake.ATS.Rules
        Development.Shake.ATS.Environment
        Development.Shake.ATS.Generate
    default-language: Haskell2010
    other-extensions: RecordWildCards DeriveGeneric DeriveAnyClass
    ghc-options: -Wall
    build-depends:
        base >=4.9 && <5,
        language-ats -any,
        shake-ext >=3.0.0.0,
        hs2ats >=0.2.0.1,
        directory -any,
        microlens -any,
        text -any,
        dependency -any,
        shake >=0.14,
        binary -any,
        shake-cabal -any,
        shake-c >=0.4.0.0
    
    if flag(development)
        ghc-options: -Werror
    
    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
