cabal-version: 1.18
name: shake-c
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2018 Vanessa McHale
maintainer: vanessa.mchale@iohk.io
author: Vanessa McHale
homepage: https://github.com/vmchale/shake-c#readme
bug-reports: https://github.com/vmchale/atspkg/issues
synopsis: Library for building C code with shake
description:
    Facilities for building C libraries and binaries, and depending on C source files. Extends [shake](http://hackage.haskell.org/package/shake).
category: Development, C
build-type: Simple
extra-doc-files: README.md

source-repository head
    type: darcs
    location: https://hub.darcs.net/vmchale/ats

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

library
    exposed-modules:
        Development.Shake.C
    hs-source-dirs: src
    default-language: Haskell2010
    other-extensions: DeriveAnyClass DeriveGeneric DerivingStrategies
                      GeneralizedNewtypeDeriving PatternSynonyms TypeFamilies
    ghc-options: -Wall
    build-depends:
        base >=4.3 && <5,
        shake >=0.14,
        cdeps -any
    
    if flag(development)
        ghc-options: -Werror
    
    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
                     -Wredundant-constraints -Wnoncanonical-monad-instances
    
    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists
