cabal-version:   1.18
name:            shake-cabal
version:         0.2.2.1
license:         BSD3
license-file:    LICENSE
copyright:       Copyright: (c) 2018-2019 Vanessa McHale
maintainer:      vamchale@gmail.com
author:          Vanessa McHale
bug-reports:     https://github.com/vmchale/atspkg/issues
synopsis:        Shake library for use with cabal
description:
    A library for using [shake](http://hackage.haskell.org/package/shake) alongside [cabal](https://www.haskell.org/cabal/).

category:        Development
build-type:      Simple
extra-doc-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: git@github.com:vmchale/atspkg.git
    subdir:   shake-cabal

flag development
    description: Enable `-Werror`
    default:     False
    manual:      True

library
    exposed-modules:  Development.Shake.Cabal
    hs-source-dirs:   src
    other-modules:    Development.Shake.Cabal.Oracles
    default-language: Haskell2010
    other-extensions:
        DeriveAnyClass DeriveGeneric DeriveDataTypeable TypeFamilies

    ghc-options:      -Wall
    build-depends:
        base >=4.8 && <5,
        shake >=0.18.4,
        Cabal >=2.2,
        directory -any,
        composition-prelude -any,
        filepath -any,
        deepseq -any,
        hashable -any,
        binary -any

    if flag(development)
        ghc-options: -Werror

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Wnoncanonical-monad-instances

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists
