cabal-version: 1.18
name: shake-ext
version: 3.0.1.0
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2018 Vanessa McHale
maintainer: vamchale@gmail.com
author: Vanessa McHale
homepage: https://hub.darcs.net/vmchale/shake-ext
bug-reports: https://hub.darcs.net/vmchale/ats/issues
synopsis: Helper functions for linting with shake
description:
    This package provides several linters out of the box, for use with [shake](http://shakebuild.com/).
category: Development, Shake
build-type: Simple
extra-doc-files: README.md

source-repository head
    type: darcs
    location: https://hub.darcs.net/vmchale/ats

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

library
    exposed-modules:
        Development.Shake.FileDetect
        Development.Shake.Linters
        Development.Shake.Man
        Development.Shake.Check
        Development.Shake.Clean
        Development.Shake.Version
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base >=4.8 && <5,
        directory -any,
        shake >=0.14
    
    if !impl(ghc >=8.0)
        build-depends:
            transformers -any,
            semigroups -any
    
    if flag(development)
        ghc-options: -Werror
    
    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
